--- a/view/adminhtml/templates/config/sync-contacts.phtml
+++ b/view/adminhtml/templates/config/sync-contacts.phtml
@@ -1,17 +1,19 @@
 <?php
 /**
  * @package     Dadolun_SibContactSync
- * @copyright   Copyright (c) 2021 Dadolun (https://github.com/dadolun95)
+ * @copyright   Copyright (c) 2023 Dadolun (https://www.dadolun.com)
  * @license     Open Source License
  */
 
-/** @var \Dadolun\SibContactSync\Block\Adminhtml\Config\SyncContacts $block */
-/** @var \Magento\Framework\View\Helper\SecureHtmlRenderer $secureRenderer */
-?>
+/** @var SyncContacts $block */
+/** @var SecureHtmlRenderer $secureRenderer */
+
+use \Dadolun\SibContactSync\Block\Adminhtml\Config\SyncContacts;
+use Magento\Framework\View\Helper\SecureHtmlRenderer; ?>
 
 <?php
 $ajaxUrl = $block->escapeJs($block->getAjaxUrl());
-$errorMessage = $block->escapeJs($block->escapeHtml(__('Error during contact sync.')));
+$errorMessage = $block->escapeJs($block->escapeHtml(__('Error during contact sync. Please retry.')));
 
 $scriptString = <<<script
 require(['jquery'], function($) {
