Upgrade to 1.0.6 version, fix Magento 2.4.4 incompatibility for message queue runner, fix error on registration file

--- a/view/adminhtml/templates/config/sync-contacts.phtml
+++ b/view/adminhtml/templates/config/sync-contacts.phtml
@@ -5,11 +5,12 @@
  * @license    This code is licensed under MIT license (see LICENSE for details)
  */
 
+use \Dadolun\SibContactSync\Block\Adminhtml\Config\SyncContacts;
+use Magento\Framework\View\Helper\SecureHtmlRenderer;
+
 /** @var SyncContacts $block */
 /** @var SecureHtmlRenderer $secureRenderer */
-
-use \Dadolun\SibContactSync\Block\Adminhtml\Config\SyncContacts;
-use Magento\Framework\View\Helper\SecureHtmlRenderer; ?>
+?>
 
 <?php
 $ajaxUrl = $block->escapeJs($block->getAjaxUrl());
